[gd_scene load_steps=14 format=3 uid="uid://ciw33ja1ggxig"]

[ext_resource type="Script" path="res://Scenes/UI/NewLevelScreen.gd" id="1_4vkvg"]
[ext_resource type="Texture2D" uid="uid://ci0duxiw3u5m2" path="res://Assets/kenney_rolling-ball-assets/PNG/Retina/number_0.png" id="2_e75m1"]
[ext_resource type="Texture2D" uid="uid://di722st1k7bj4" path="res://Assets/kenney_rolling-ball-assets/PNG/Retina/number_1.png" id="3_c6uoh"]
[ext_resource type="Texture2D" uid="uid://d4ld3vhe7qfaf" path="res://Assets/kenney_rolling-ball-assets/PNG/Retina/number_2.png" id="4_8f08b"]
[ext_resource type="Texture2D" uid="uid://copl5htjxf6tp" path="res://Assets/kenney_rolling-ball-assets/PNG/Retina/number_3.png" id="5_nbtac"]
[ext_resource type="Texture2D" uid="uid://ci03uwrrbqu2f" path="res://Assets/kenney_rolling-ball-assets/PNG/Retina/number_4.png" id="6_32poh"]
[ext_resource type="Texture2D" uid="uid://c6d4opmvn0mnv" path="res://Assets/kenney_rolling-ball-assets/PNG/Retina/number_5.png" id="7_wnwcr"]
[ext_resource type="Texture2D" uid="uid://bqlddmko8cvmv" path="res://Assets/kenney_rolling-ball-assets/PNG/Retina/number_6.png" id="8_g7kw8"]
[ext_resource type="Texture2D" uid="uid://sffa5u5iox22" path="res://Assets/kenney_rolling-ball-assets/PNG/Retina/number_7.png" id="9_v3f62"]
[ext_resource type="Texture2D" uid="uid://c40vydf8fgn37" path="res://Assets/kenney_rolling-ball-assets/PNG/Retina/number_8.png" id="10_vpl5s"]
[ext_resource type="Texture2D" uid="uid://dhp6rh8d2hl4b" path="res://Assets/kenney_rolling-ball-assets/PNG/Retina/number_9.png" id="11_3bqdr"]
[ext_resource type="PackedScene" uid="uid://jt35h2qpjbp7" path="res://Scenes/UI/fade_transition.tscn" id="12_rx5e6"]

[sub_resource type="LabelSettings" id="LabelSettings_aqjmk"]
font_size = 54
outline_size = 7
outline_color = Color(0.52549, 0.537255, 0.623529, 1)
shadow_size = 4
shadow_color = Color(0.52549, 0.537255, 0.623529, 1)
shadow_offset = Vector2(0, 5)

[node name="NewLevelScreen" type="Node2D"]
script = ExtResource("1_4vkvg")
number_images = {
0: ExtResource("2_e75m1"),
1: ExtResource("3_c6uoh"),
2: ExtResource("4_8f08b"),
3: ExtResource("5_nbtac"),
4: ExtResource("6_32poh"),
5: ExtResource("7_wnwcr"),
6: ExtResource("8_g7kw8"),
7: ExtResource("9_v3f62"),
8: ExtResource("10_vpl5s"),
9: ExtResource("11_3bqdr")
}
metadata/_edit_horizontal_guides_ = [324.0]
metadata/_edit_vertical_guides_ = [616.0]

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1162.0
offset_bottom = 654.0
color = Color(0, 0, 0, 1)

[node name="Control" type="Control" parent="."]
clip_contents = true
custom_minimum_size = Vector2(1200, 400)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1232.0
offset_bottom = 696.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.991
offset_left = 413.0
offset_top = 283.0
offset_right = -637.0
offset_bottom = -318.736
scale = Vector2(1.47513, 1.0157)
text = "LEVEL"
label_settings = SubResource("LabelSettings_aqjmk")

[node name="Number1" type="Sprite2D" parent="Control"]
position = Vector2(686, 325)
texture = ExtResource("2_e75m1")

[node name="Number0" type="Sprite2D" parent="Control"]
position = Vector2(735, 325)
texture = ExtResource("2_e75m1")

[node name="Start" type="Label" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.991
offset_left = 505.0
offset_top = 283.0
offset_right = -526.0
offset_bottom = -318.736
scale = Vector2(1.47513, 1.0157)
text = "Start!"
label_settings = SubResource("LabelSettings_aqjmk")

[node name="Fade_transition" parent="." instance=ExtResource("12_rx5e6")]
